[gd_scene load_steps=8 format=2]

[ext_resource path="res://Cars/Wheel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cars/CarBodyBlue.tres" type="Material" id=2]
[ext_resource path="res://Models/chassi.scn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Cars/Car.gd" type="Script" id=4]
[ext_resource path="res://Cars/Car_Psx_Mat.tres" type="PhysicsMaterial" id=5]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.009, 0.801, 2.297 )

[sub_resource type="SphereShape" id=3]
radius = 0.5

[node name="RigidBody" type="RigidBody"]
collision_layer = 2
mass = 50.0
physics_material_override = ExtResource( 5 )
can_sleep = false
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 4 )
jump_force = 14.0
air_drag = 0.3
boost_force = 20.0
down_force = 25.0
max_speed = 50.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.400119, 0.365956 )
shape = SubResource( 2 )

[node name="wheel_front_left_collider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.781137, -0.279681, 1.70545 )
shape = SubResource( 3 )

[node name="wheel_front_right_collider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.781, -0.279681, 1.70545 )
shape = SubResource( 3 )

[node name="wheel_back_left_collider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.781, -0.279681, -1.14155 )
shape = SubResource( 3 )

[node name="wheel_back_right_collider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.781, -0.279681, -1.14155 )
shape = SubResource( 3 )

[node name="Car" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.779681, 0.183455 )

[node name="chassi" parent="Car" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00609064, 0 )
material/0 = ExtResource( 2 )

[node name="BottomPlate" type="Spatial" parent="Car"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="Wheel_Front_Left" parent="Car/BottomPlate" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.781137, 0, 1.522 )

[node name="Wheel_Front_Right" parent="Car/BottomPlate" instance=ExtResource( 1 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -0.781, 0, 1.522 )

[node name="Wheel_Back_Left" parent="Car/BottomPlate" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.798, 0, -1.325 )

[node name="Wheel_Back_Right" parent="Car/BottomPlate" instance=ExtResource( 1 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -0.798093, 0, -1.32507 )

[node name="surface_raycast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -2, 0 )
